# kalman-filter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboards/: app_streamlit.py
docker/: Dockerfile
docs/: api.md  index.md
experiments/: run_experiments.py
notebooks/: 01_synthetic_data.ipynb  02_kalman_demo.ipynb  03_bayesian_sv_numpyro.ipynb  04_benchmarks.ipynb
src/kbv/: __init__.py  metrics.py  utils.py
src/kbv/inference/: __init__.py  em.py  mcmc.py  svi.py
src/kbv/models/: __init__.py  bayes_numpyro.py  kalman.py  particle_filter.py  switching_kf.py  ukf.py
tests/: test_inference.py  test_kalman.py  test_synth.py
