[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalman-bayes-volatility"
version = "0.1.0"
description = "Kalman-Bayesian Volatility Filtering for Regime-Switching Stochastic Models"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["kalman-filter", "bayesian-inference", "volatility", "finance", "state-space-models"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpyro>=0.11.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "yfinance>=0.2.0",
    "streamlit>=1.25.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "nbconvert>=7.0.0",
    "ipykernel>=6.20.0",
]

[project.urls]
Homepage = "https://github.com/your_username/kalman-bayes-volatility"
Documentation = "https://github.com/your_username/kalman-bayes-volatility/docs"
Repository = "https://github.com/your_username/kalman-bayes-volatility"
Issues = "https://github.com/your_username/kalman-bayes-volatility/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

